--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -8,7 +8,8 @@
     </p>
     <p><strong>Contact:</strong><br>
       Phone: 0176-86715651<br>
-      Email: <a href='mailto:gloria.schaffarczyk@gmail.com'>gloria.schaffarczyk(at)gmail.com</a><br></p>
+      Email: <a href='mailto:gloria.schaffarczyk@gmail.com'>gloria.schaffarczyk
+        (at)gmail.com</a><br></p>
     <p><strong>Disclaimer:</strong><br><br>
       <strong>Liability for Content</strong><br><br>
       The content of our pages has been created with the utmost care. However, we cannot guarantee the accuracy,
