--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,11 +3,10 @@
 .about-me-section {
   z-index: 4;
   position: relative;
-  // border: 1px solid red;
   display: flex;
   flex-direction: row;
-  margin-top: 150px;
-  font-size: 1rem;
+  margin-top: $padding-large;
+  font-size: $font-size-base;
   background-image: url("../../assets/red_shade_01.png");
   background-size: 620px 620px;
   background-repeat: no-repeat;
@@ -17,9 +16,8 @@
 
 .about-me-left {
   width: 50%;
-  // border: 1px solid rgb(162, 0, 255);
   padding-left: $padding-large;
-  padding-right: 50px;
+  padding-right: $padding-medium;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -28,7 +26,7 @@
   box-sizing: border-box;
 
   > h1 {
-    font-size: 5.6rem;
+    font-size: $font-size-xxl;
     margin-block-start: 0.1em;
     margin-block-end: 0.1em;
   }
@@ -47,13 +45,14 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+    gap: $gap-medium;
+
     &:hover img {
       transform: scale(1.1);
     }
 
     > p {
-      padding-left: 16px;
+      padding-left: $padding-small;
       display: flex;
     }
   }
@@ -61,7 +60,6 @@
 
 .about-me-right {
   width: 50%;
-  // border: 1px solid greenyellow;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -75,6 +73,7 @@
   right: 0;
 }
 
+// Media Queries
 @media (max-width: 1700px) {
   .about-me-section {
     background-position: 1450px -30px;
@@ -93,10 +92,9 @@
   }
 }
 
-// Media Queries
-@media (max-width: 1300px) {
+@media (max-width: $breakpoint-lg) {
   .about-me-left h1 {
-    font-size: 4.5rem;
+    font-size: $font-size-xl;
   }
 }
 
@@ -113,30 +111,32 @@
 
   .about-me-left {
     width: 100%;
-    padding: 0 100px 0 100px;
+    padding: 0 $padding-large 0 $padding-large;
     display: flex;
     justify-content: flex-start;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: $breakpoint-md) {
   .about-me-section {
-    padding: 0 50px 0 50px;
-    margin-top: 100px;
+    padding: 0 $padding-medium 0 $padding-medium;
+    margin-top: $padding-medium;
     background-position: 150px 0px;
+
     > .about-me-left {
       padding: 0;
     }
   }
   .about-me-left h1 {
-    font-size: 3rem;
+    font-size: $font-size-lg;
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: $breakpoint-sm) {
   .about-me-section {
-    padding: 0 25px 0 25px;
-    margin-top: 70px;
+    padding: 0 $padding-small 0 $padding-small;
+    margin-top: $padding-small;
+
     > .about-me-left {
       padding: 0;
       display: flex;
@@ -146,7 +146,7 @@
 
   .about-me-bullet-points {
     > .about-me-bullet-point {
-      gap: 12px;
+      gap: $gap-small;
     }
   }
 }
@@ -158,20 +158,20 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: $breakpoint-xs) {
   .about-me-section {
-    font-size: 0.9rem;
+    font-size: $font-size-sm;
     background-position: 50px 0px;
   }
 
   .about-me-left h1 {
-    font-size: 2.2rem;
+    font-size: $font-size-xl;
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: $breakpoint-xs) {
   .about-me-section {
-    padding: 0 25px;
-    font-size: 0.8rem;
+    padding: 0 $padding-small;
+    font-size: $font-size-xs;
   }
 }
