--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,10 @@
 @import "../../styles/variables.scss";
 
+// Footer Section Styles
 .footer-section {
   height: 20vh;
   position: relative;
-  padding: 50px 100px;
+  padding: $padding-medium $padding-large;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -11,85 +12,91 @@
   justify-content: center;
   align-items: stretch;
   z-index: 50;
-}
 
-.footer-line {
-  position: absolute;
-  left: 0;
-  top: 0;
-  border: 0;
-  border-top: 4px solid #00bf89;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  width: 100%;
-}
-
-.footer-logo-and-social {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: space-evenly;
-  align-items: center;
-  p {
-    padding: 0 12px 0 12px;
-  }
-}
-
-.footer-imprint {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
-
-  a {
-    text-decoration: none;
-    color: white;
-    position: relative;
-    overflow: visible;
-
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 8px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: #00bf89;
-      transition: width 0.3s ease-in-out;
-      z-index: 51;
-    }
-
-    &:hover:after {
-      width: 100%;
-    }
-  }
-}
-
-.footer-social-media-links img {
-  padding-right: 24px;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  &:hover {
-    transform: scale(1.2);
+  // Footer Line
+  .footer-line {
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 0;
+    border-top: 4px solid $primary-color;
+    border-top-right-radius: $border-radius-large;
+    border-bottom-right-radius: $border-radius-large;
+    width: 100%;
   }
 
-  &:active {
-    transform: scale(0.95);
-  }
-}
-
-@media (max-width: 768px) {
-  .footer-section {
-    padding: 50px 50px;
-  }
-}
-
-@media (max-width: 560px) {
-  .footer-section {
-    padding: 50px 25px;
+  // Logo and Social Media Section
+  .footer-logo-and-social {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+
+    p {
+      padding: 0 12px;
+    }
+  }
+
+  // Imprint Section
+  .footer-imprint {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+
+    a {
+      text-decoration: none;
+      color: $text-color;
+      position: relative;
+      overflow: visible;
+
+      &:after {
+        content: "";
+        position: absolute;
+        bottom: 8px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: $primary-color;
+        transition: width 0.3s ease-in-out;
+        z-index: 51;
+      }
+
+      &:hover:after {
+        width: 100%;
+      }
+    }
+  }
+
+  // Social Media Icons
+  .footer-social-media-links img {
+    padding-right: 24px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+  }
+}
+
+// Media Queries
+@media (max-width: $breakpoint-md) {
+  .footer-section {
+    padding: $padding-medium $padding-medium;
+  }
+}
+
+@media (max-width: $breakpoint-sm) {
+  .footer-section {
+    padding: $padding-medium $padding-small;
     flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
