--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,14 +1,14 @@
 @import "../../styles/variables.scss";
 
 p {
-  color: white;
+  color: $color-light;
 }
 
 a {
-  color: white;
+  color: $color-light;
   text-decoration: none;
   padding-right: 12px;
-  font-size: 1.4rem;
+  font-size: $font-size-m;
 }
 
 header {
@@ -19,9 +19,8 @@ header {
   justify-content: space-between;
   align-items: center;
   width: 100vw;
-  height: 110px;
   box-sizing: border-box;
-  padding: 37px 100px;
+  padding: 37px $padding-large;
   position: fixed;
   background-color: $color-dark;
   z-index: 20;
@@ -84,11 +83,11 @@ header {
     gap: 12px;
 
     a {
-      color: white;
+      color: $color-light;
       text-decoration: none;
-      font-size: 1.4rem;
+      font-size: $font-size-m;
       &:hover {
-        color: #00bf89;
+        color: $primary-color;
       }
     }
 
@@ -113,9 +112,9 @@ header {
     padding: 0;
 
     a {
-      color: white;
+      color: $color-light;
       text-decoration: none;
-      font-size: 1.8rem;
+      font-size: $font-size-lg;
       padding: 15px 0;
     }
 
@@ -133,28 +132,28 @@ header {
     }
   }
 
-  @media (max-width: 1200px) {
+  @media (max-width: $breakpoint-lg) {
     .icon.nav-icon-4 {
       display: block;
     }
   }
 }
 
-@media (max-width: 768px) {
-  header {
-    padding: 37px 50px;
+  @media (max-width: $breakpoint-md) {
+    header {
+      padding: 37px $padding-medium;
+    }
   }
-}
 
-@media (max-width: 560px) {
-  header {
-    padding: 37px 25px;
+  @media (max-width: $breakpoint-sm) {
+    header {
+      padding: 37px $padding-small;
+    }
   }
-}
 
-@media (max-width: 360px) {
-  img {
-    width: 160px;
-    height: auto;
-  }
+  @media (max-width: $breakpoint-xs) {
+    img {
+        width: 160px;
+        height: auto;
+    }
 }
