--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -121,7 +121,7 @@
   a {
     text-decoration: none;
     color: $text-color;
-    font-size: $font-size;
+    font-size: $font-size-base;
   }
 
   img {
@@ -155,7 +155,7 @@
   text-align: center;
   text-decoration: none;
   font-family: Poppins, sans-serif;
-  font-size: $font-size;
+  font-size: $font-size-base;
   font-weight: bold;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -186,7 +186,7 @@
   span {
     writing-mode: vertical-lr;
     transform: rotate(0deg);
-    font-size: $font-size;
+    font-size: $font-size-base;
     color: $text-color;
   }
 
