--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -8,22 +8,18 @@
   align-items: center;
   justify-content: flex-start;
   position: relative;
-  padding: 12px 100px;
+  padding: 12px $padding-large;
   box-sizing: border-box;
   overflow: visible;
   background-image: url("../../assets/green_shade_02.png");
   background-size: 1500px 400px;
   background-repeat: no-repeat;
   background-position: 1600px 10px;
-  // border: 1px solid yellow;
 }
 
 .testimonial-wrapper {
   display: flex;
-  // transition: transform 0.5s ease-in-out;
   width: 100%;
-  // height: 350px;
-  border: 1px solid rgb(0, 110, 255);
   flex-direction: row;
   align-content: center;
   justify-content: space-around;
@@ -34,7 +30,6 @@
 .single-testimonial {
   flex: 0 0 100%;
   display: flex;
-  // height: 300px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -49,7 +44,7 @@
   top: 50%;
   transform: translateY(-50%);
   border: 0;
-  border-top: 4px solid #ff3f79;
+  border-top: 4px solid $secondary-color;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   width: 25%;
@@ -63,7 +58,7 @@
 .quote-line {
   flex-grow: 1;
   height: 3px;
-  background-color: #ff3f79;
+  background-color: $secondary-color;
   border-radius: 20px;
 }
 
@@ -88,7 +83,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  border: 3px solid #00bf89;
+  border: 3px solid $primary-color;
   border-radius: 25px;
   padding: 25px 96px;
   width: 35vw;
@@ -99,7 +94,7 @@
 }
 
 .quote-author {
-  color: #ffffff;
+  color: $color-light;
 }
 
 .line-and-author {
@@ -129,7 +124,7 @@
   background-color: transparent;
   border: none;
   padding: 10px 20px;
-  color: #00bf89;
+  color: $primary-color;
   font-size: 24px;
   cursor: pointer;
   z-index: 2;
@@ -137,7 +132,7 @@
 
 .arrowLeft:hover,
 .arrowRight:hover {
-  color: #ffffff;
+  color: $color-light;
 }
 
 /* Dots Styles */
@@ -155,11 +150,11 @@
 }
 
 .active-dot {
-  background-color: #00bf89;
+  background-color: $primary-color;
 }
 
 .inactive-dot {
-  background-color: #ff3f79;
+  background-color: $secondary-color;
 }
 
 @media (max-width: 1700px) {
@@ -174,7 +169,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: $breakpoint-lg) {
   .testimonial-container {
     background-size: 1000px 500px;
     background-position: 700px 10px;
@@ -199,9 +194,9 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: $breakpoint-md) {
   .testimonial-container {
-    padding: 12px 50px;
+    padding: 12px $padding-medium;
     background-position: 400px 10px;
   }
 
@@ -218,11 +213,11 @@
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: $breakpoint-sm) {
   .testimonial-container {
     background-position: 150px 10px;
-    padding: 12px 25px;
-    font-size: 0.9rem;
+    padding: 12px $padding-small;
+    font-size: $font-size-sm;
   }
 
   .quote-container {
@@ -246,7 +241,7 @@
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: $breakpoint-xs) {
   .testimonial-line {
     top: 14%;
   }
