--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,3 +26,6 @@
     <a href="#contact" (click)="closeMenu()">Contact</a>
   </nav>
 </header>
+
+<!-- Dummy-Platzhalter -->
+<div class="placeholder"></div>
