--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -92,6 +92,6 @@
     </p>
     <p><strong>Source:</strong> <a target="_blank" rel="noopener noreferrer" href="https://www.e-recht24.de">
         https://www.e-recht24.de</a></p>
-    <h3><a routerLink="/">Back to homepage</a></h3>
+    <h3><a routerLink="/">&#8592; Home</a></h3>
   </div>
 </div>
