--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,7 +37,9 @@ $gap-large: 40px;
 $gap-xlarge: 64px;
 
 // Media Queries
+$breakpoint-min: 320px;
 $breakpoint-xs: 360px;
+$breakpoint-s: 480px;
 $breakpoint-sm: 560px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 1200px;
