--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -78,7 +78,7 @@
       href="https://www.impressum-generator.de">impressum-generator.de</a> from <a target="_blank"
       rel="noopener noreferrer" href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
 
-    <h3><a routerLink="/">Back to homepage</a></h3>
+    <h3><a routerLink="/">&#8592; Home</a></h3>
 
   </div>
 </div>
